# Pytorch_Retinaface

./: pyproject.toml
.github/workflows/: release.yml
retinaface/: face_detector.py
retinaface/data/: data_augment.py
retinaface/layers/modules/: multibox_loss.py
retinaface/models/: retinaface.py
